--- a/index.html
+++ b/index.html
@@ -9,37 +9,21 @@
 </head>
 <body>
     <!-- Header -->
-    <header id="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <div class="logo-icon">
-                        <i class="fas fa-balance-scale"></i>
-                    </div>
-                    <div class="logo-text">
-                        <h1>Injúria Racial</h1>
-                        <p>Entenda, Reconheça e Combata</p>
-                    </div>
+<header id="header">
+    <div class="container">
+        <div class="header-content">
+            <div class="logo">
+                <div class="logo-image">
+                    <img src="assets/logo.png" alt="Logo Colégio Cívico-Militar" class="logo-img">
                 </div>
-
-                <!-- Desktop Navigation -->
-                <nav class="desktop-nav">
-                    <a href="#inicio" class="nav-item">Início</a>
-                    <a href="#conceito" class="nav-item">O que é?</a>
-                    <a href="#diferenca" class="nav-item">Diferença</a>
-                    <a href="#casos" class="nav-item">Casos Reais</a>
-                    <a href="#legislacao" class="nav-item">Legislação</a>
-                    <a href="#combater" class="nav-item">Como Combater</a>
-                </nav>
-
-                <!-- Mobile Menu Button -->
-                <button class="mobile-menu-btn" id="mobileMenuBtn">
-                    <i class="fas fa-bars"></i>
-                </button>
+                <div class="logo-text">
+                    <h1>Injúria Racial</h1>
+                    <p>Entenda, Reconheça e Combata</p>
+                </div>
             </div>
 
-            <!-- Mobile Navigation -->
-            <nav class="mobile-nav" id="mobileNav">
+            <!-- Desktop Navigation -->
+            <nav class="desktop-nav">
                 <a href="#inicio" class="nav-item">Início</a>
                 <a href="#conceito" class="nav-item">O que é?</a>
                 <a href="#diferenca" class="nav-item">Diferença</a>
@@ -47,8 +31,24 @@
                 <a href="#legislacao" class="nav-item">Legislação</a>
                 <a href="#combater" class="nav-item">Como Combater</a>
             </nav>
+
+            <!-- Mobile Menu Button -->
+            <button class="mobile-menu-btn" id="mobileMenuBtn">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
-    </header>
+
+        <!-- Mobile Navigation -->
+        <nav class="mobile-nav" id="mobileNav">
+            <a href="#inicio" class="nav-item">Início</a>
+            <a href="#conceito" class="nav-item">O que é?</a>
+            <a href="#diferenca" class="nav-item">Diferença</a>
+            <a href="#casos" class="nav-item">Casos Reais</a>
+            <a href="#legislacao" class="nav-item">Legislação</a>
+            <a href="#combater" class="nav-item">Como Combater</a>
+        </nav>
+    </div>
+</header>
 
     <!-- Main Content -->
     <main>
